--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
 				"@babel/plugin-transform-classes": "^7.20.2",
 				"@babel/preset-env": "^7.20.2",
 				"@babel/preset-react": "^7.18.6",
+				"@types/jest": "^29.2.3",
+				"@types/node": "^18.11.10",
+				"@types/react": "^18.0.26",
+				"@types/react-dom": "^18.0.9",
+				"@types/react-router-dom": "^5.3.3",
 				"autoprefixer": "^10.4.13",
 				"bootstrap": "^5.2.3",
 				"clean-webpack-plugin": "^4.0.0",
@@ -31,24 +36,22 @@
 				"cross-env": "^7.0.3",
 				"css-loader": "^6.7.2",
 				"exports-loader": "^4.0.0",
-				"file-loader": "^6.2.0",
 				"font-awesome": "^4.7.0",
 				"html-loader": "^4.2.0",
 				"html-webpack-plugin": "^5.5.0",
 				"imports-loader": "^4.0.1",
 				"mini-css-extract-plugin": "^2.7.1",
 				"node-sass": "^8.0.0",
-				"optimize-css-assets-webpack-plugin": "^6.0.1",
 				"postcss-loader": "^7.0.2",
 				"postcss-normalize": "^10.0.1",
 				"resolve-url-loader": "^5.0.0",
 				"sass-loader": "^13.2.0",
 				"style-loader": "^3.3.1",
 				"tether": "^2.0.0",
+				"typescript": "^4.9.3",
 				"url-loader": "^4.1.1",
 				"webpack": "^5.75.0",
 				"webpack-cli": "^5.0.0",
-				"webpack-concat-plugin": "^2.4.2",
 				"webpack-dev-server": "^4.11.1",
 				"webpack-merge": "^5.8.0"
 		},
@@ -56,7 +59,6 @@
 				"@azure/cosmos": "^3.17.2",
 				"@babel/plugin-transform-runtime": "^7.19.6",
 				"@babel/polyfill": "^7.12.1",
-				"@babel/preset-es2015": "^7.0.0-beta.53",
 				"@babel/preset-stage-0": "^7.8.3",
 				"@babel/register": "^7.18.9",
 				"@popperjs/core": "^2.11.6",
@@ -64,23 +66,14 @@
 				"axios": "^1.2.0",
 				"babel-loader": "^9.1.0",
 				"clean-webpack-plugin": "^4.0.0",
-				"fg-appendaround": "^1.1.0",
-				"file-system": "^1.2.2",
 				"fs": "0.0.1-security",
 				"gsap": "^3.11.3",
-				"jquery": "^3.6.1",
-				"jquery-ui": "^1.13.2",
-				"jquery-ui-touch-punch": "^0.2.3",
 				"js-cookie": "^3.0.1",
 				"lazysizes": "^5.3.2",
 				"lodash": "^4.17.21",
-				"luxon": "^3.1.1",
 				"magnific-popup": "^1.1.0",
 				"modernizr": "^3.12.0",
 				"moment": "^2.29.4",
-				"moment-timezone": "^0.5.39",
-				"pikaday": "^1.8.2",
-				"pikaday-responsive": "^0.7.0",
 				"popper.js": "^1.16.0",
 				"react": "^18.2.0",
 				"react-calendar": "^4.0.0",
@@ -92,7 +85,7 @@
 				"reactstrap": "^9.1.5",
 				"respond.js": "^1.4.2",
 				"simplebar": "^5.3.9",
-				"twitter-widgets": "^2.0.0",
-				"webpack-modernizr-loader": "^5.0.0"
+				"source-map-loader": "^4.0.1",
+				"ts-loader": "^9.4.2"
 		}
 }
